--- a/CTFd/plugins/challenges/assets/view.html
+++ b/CTFd/plugins/challenges/assets/view.html
@@ -11,6 +11,6 @@
 
 {% block submit %}
     <button id="challenge-submit" class="challenge-submit" type="submit">
-        Сдать
+        Отправить
     </button>
 {% endblock %}
